# ledger-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  README.md  config.json  dev-docker-compose.yml  docker-compose.yml  log.conf  pyproject.toml  requirements.txt  spec.md
.github/workflows/: build-and-deploy.yml  build-and-push.yml  codeql.yml  test.yml
alembic/: env.py
alembic/versions/: 21bce503eccb_add_display_id_field.py  2e8950fafe56_.py  5c4e1b58f588_add_currencies.py  6735840016d6_.py  730a05779b5e_update_event_models.py  799a8048324f_update_event_models.py  9561e0128062_add_member_timezones.py  ada60e3a175e_initial_events_tables.py  b1b48fc8932e_add_messagetype_to_botmessage.py  b3a9554f4266_add_member_lookup_enabled.py  f7d90b16296d_update_event_region_model.py
data/: ledger_bot.sql
discord/: bot.py  main.py  responses.py
ledger_bot/: LedgerBot.py  __init__.py  __main__.py  config.py  database.py  date_helpers.py  ledger_bot.py  message_generator.py  models.py  process_dm.py  process_message.py  process_transactions.py  processs_message.py  reactions.py  reminder_manager.py  run_ledger_bot.py  slash_commands.py  storage.py
ledger_bot/clients/: __init__.py  event_client.py  events_client.py  extended_client.py  extended_discord_client.py  reaction_roles_client.py  transactions_client.py
ledger_bot/commands_dm/: __init__.py  command_dev.py  command_help.py  command_list.py  command_stats.py  command_version.py  get_dm_channel.py  is_dm.py  process_dm.py
ledger_bot/commands_scheduled/: __init__.py  cleanup.py  shutdown.py
ledger_bot/commands_slash/: __init__.py  command_add_role.py  command_add_user.py  command_hello.py  command_help.py  command_list.py  command_lookup.py  command_new_event.py  command_new_sale.py  command_new_split.py  command_ping.py  command_settings.py  command_stats.py  setup_slash.py
ledger_bot/core/: __init__.py  config.py  help_manager.py
ledger_bot/errors/: __init__.py  airtable_error.py  datetime_errors.py  service_errors.py  signal_halt_error.py  storage_errors.py
ledger_bot/message_generators/: __init__.py  generate_help_message.py  generate_list_message.py  generate_reminder_status_message.py  generate_stats_message.py  generate_transaction_status_message.py  send_message.py  split_message.py
ledger_bot/mixins/: __init__.py  extended_client.py  reaction_roles.py  reaction_roles_client.py  transactions_client.py
ledger_bot/models/: __init__.py  base.py  bot_message.py  currency.py  event.py  event_bot_message.py  event_deposit.py  event_member.py  event_region.py  event_wine.py  member.py  member_transaction_summary.py  model.py  reaction_role.py  reminder.py  stats.py  transaction.py
ledger_bot/process_dm/: __init__.py  command_dev.py  command_help.py  command_list.py  command_reminder.py  command_stats.py  command_version.py  process_dm.py
ledger_bot/process_transactions/: __init__.py  _send_message.py  approve_transaction.py  cancel_transaction.py  mark_transaction_delivered.py  mark_transaction_paid.py  refresh_transaction.py  send_message.py  send_reminder_dm.py
ledger_bot/scheduled_commands/: __init__.py  cleanup.py
ledger_bot/services/: __init__.py  bot_message_service.py  currency_service.py  event_member_service.py  event_region_service.py  event_service.py  member_service.py  reaction_role_service.py  reminder_service.py  service.py  service_helpers.py  stats_service.py  transaction_service.py
ledger_bot/slash_commands/: __init__.py  command_add_role.py  command_add_user.py  command_hello.py  command_help.py  command_list.py  command_new_event.py  command_new_sale.py  command_new_split.py  command_ping.py  command_stats.py  (+1 more)
scripts/: migrate_from_airtable_csv.py
tests/: __init__.py  helpers.py  test_config.py
(+66 files in other folders)
