[tool.poetry]
name = "ledger-bot"
version = "0.1.0"
description = "A Discord bot for tracking sales"
authors = ["Dom Chester <dom.chester@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ledger_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
cachetools = "^5.3.2"
asyncache = "^0.3.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
start = "python -m ledger_bot"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
