[tool.poetry]
name = "ledger-bot"
version = "0.1.0"
description = "A Discord bot for tracking sales"
authors = ["Dom Chester <dom.chester@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ledger_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
cachetools = "^5.5.0"
asyncache = "^0.3.1"
arrow = "^1.3.0"
pandas = "^2.2.2"
emoji = "^2.10.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
mypy = "^1.14.1"
pandas-stubs = "^2.2.2.240603"
types-cachetools = "^5.3.0.7"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^24.1.17"
flake8-builtins = "^2.2.0"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-simplify = "^0.21.0"
pep8-naming = "^0.14.1"
bandit = "^1.8.0"
pytest-asyncio = "^0.23.4"
aioresponses = "^0.7.6"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
start = "python -m ledger_bot"
pytest = "pytest --cov=ledger_bot tests/ --cov-report term:skip-covered"
flake8 = "flake8 ledger_bot"
bandit = "bandit -c pyproject.toml -r ledger_bot"
mypy = "mypy ledger_bot"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["apscheduler", "apscheduler.schedulers.asyncio", "asyncache"]
ignore_missing_imports = true

[tool.bandit]
skips = ["B404"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    ]